--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StopWatch</title>
     <script src="app.js"></script>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <div>
+    <div id="mainheading">
         <h1>StopWatch</h1>
     </div>
-    <div>
-        <h1>0</h1>
-        <h1>0</h1>
-        <h1>0</h1>
+    <div id="timer">
+        <h1 id="min">0</h1>
+        <h1 id="sec">0</h1>
+        <h1 id="msec">0</h1>
     </div>
-    <div>
+    <div id="timerControls">
         <button>Start</button>
         <button>Stop</button>
         <button>Reset</button>
