--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="timerControls">
         <button id="startBtn" onclick="Start()">Start</button>
         <button onclick="Pause()">Stop</button>
-        <button onclick="Reset()">Reset</button>
+        <button id="resetBtn" onclick="Reset()">Reset</button>
     </div>
 
     <script src="./app.js"></script>
