added the pause button functionality

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div id="timerControls">
         <button id="startBtn" onclick="Start()">Start</button>
-        <button onclick="Pause()">Stop</button>
+        <button id="pauseBtn" onclick="Pause()">Stop</button>
         <button id="resetBtn" onclick="Reset()">Reset</button>
     </div>
 
