--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     </div>
     <h1>Last Record History</h1>
     <div id="lastRecord">
-        <h1 id="lmin">0</h1>
+        <!-- <h1 id="lmin">0</h1>
         <h1 id="lsec">0</h1>
-        <h1 id="lmsec">0</h1>
+        <h1 id="lmsec">0</h1> -->
     </div>
 
     <script src="./app.js"></script>
