added the history function

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StopWatch</title>
+    <title>StopWatch By Muhammad Sameem</title>
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
@@ -22,7 +22,7 @@
             <button id="resetBtn" onclick="Reset()">Reset</button>
         </div>
     </div>
-    
+
     <h1>StopWatch Timer History</h1>
     <div id="lastRecord">
 
