--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     </div>
     <div id="main">
         <div id="timer">
-            <h1 id="min">0</h1>
-            <h1 id="sec">0</h1>
+            <h1 id="min">0</h1> <h2>:</h2>
+            <h1 id="sec">0</h1> <h2>:</h2>
             <h1 id="msec">0</h1>
         </div>
         <div id="timerControls">
@@ -23,7 +23,7 @@
         </div>
     </div>
 
-    <h1>StopWatch Timer History</h1>
+    <h1>-- StopWatch Timer History --</h1>
     <div id="lastRecord">
 
     </div>
